# nil

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  README.md  dprint.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CONTRIBUTING.md
.zed/: settings.json
app/: package.json  vite.config.ts
crates/nil-client/: Cargo.toml
crates/nil-client/src/: client.rs  error.rs  http.rs  lib.rs  server.rs  websocket.rs
crates/nil-client/src/client/: battle.rs  chat.rs  cheat.rs  continent.rs  infrastructure.rs  lobby.rs  mod.rs  player.rs  round.rs  script.rs  village.rs  websocket.rs  world.rs
crates/nil-client/src/client/cheat/: behavior.rs  npc.rs  resources.rs
crates/nil-client/src/client/infrastructure/: prefecture.rs
crates/nil-client/src/client/npc/: bot.rs  precursor.rs
crates/nil-client/src/http/: mod.rs
crates/nil-continent/: Cargo.toml
crates/nil-core/: Cargo.toml
crates/nil-core-macros/: Cargo.toml
crates/nil-core-macros/src/: building.rs  lib.rs  report.rs  unit.rs
crates/nil-core-macros/src/building/: mine.rs  storage.rs
crates/nil-core-macros/src/infrastructure/: building.rs
crates/nil-core-macros/src/npc/: precursor.rs
crates/nil-core/src/: battle.rs  building.rs  chat.rs  continent.rs  error.rs  event.rs  infrastructure.rs  lib.rs  lobby.rs  military.rs  player.rs  resource.rs  round.rs  savedata.rs  script.rs  unit.rs  village.rs  world.rs
crates/nil-core/src/battle/: mod.rs  tests.rs
crates/nil-core/src/behavior/: build.rs  mod.rs
crates/nil-core/src/behavior/index/: idle.rs
crates/nil-core/src/building/: academy.rs  farm.rs  iron_mine.rs  prefecture.rs  prelude.rs  quarry.rs  sawmill.rs  stable.rs  wall.rs  warehouse.rs
crates/nil-core/src/continent/: coord.rs  field.rs  index.rs  mod.rs  size.rs  tests.rs
crates/nil-core/src/infrastructure/: building.rs  mine.rs  mod.rs  stats.rs  storage.rs
crates/nil-core/src/infrastructure/building/: academy.rs  farm.rs  iron_mine.rs  mod.rs  prefecture.rs  prelude.rs  quarry.rs  sawmill.rs  silo.rs  stable.rs  wall.rs  warehouse.rs
crates/nil-core/src/infrastructure/building/academy/: mod.rs  recruit_catalog.rs  recruit_queue.rs
crates/nil-core/src/infrastructure/building/prefecture/: build_catalog.rs  build_queue.rs  mod.rs  queue.rs
crates/nil-core/src/infrastructure/building/stable/: mod.rs  recruit_queue.rs
crates/nil-core/src/military/: army.rs  maneuver.rs  mod.rs  squad.rs  tests.rs  unit.rs
crates/nil-core/src/military/army/: mod.rs  personnel.rs
crates/nil-core/src/military/maneuver/: mod.rs
crates/nil-core/src/military/squad/: mod.rs  size.rs
crates/nil-core/src/military/unit/: mod.rs  prelude.rs
crates/nil-core/src/military/unit/stats/: haul.rs
crates/nil-core/src/npc/: bot.rs  precursor.rs
crates/nil-core/src/npc/precursor/: a.rs  b.rs  mod.rs
crates/nil-core/src/player/: manager.rs
crates/nil-core/src/report/: battle.rs  mod.rs
crates/nil-core/src/resource/: cost.rs  diff.rs  maintenance.rs  prelude.rs  workforce.rs
crates/nil-core/src/resources/: cost.rs  mod.rs  prelude.rs
crates/nil-core/src/unit/: archer.rs  axeman.rs  heavy_cavalry.rs  light_cavalry.rs  mod.rs  pikeman.rs  prelude.rs  squad.rs  swordsman.rs
crates/nil-core/src/village/: coord.rs  owner.rs
crates/nil-core/src/world/: battle.rs  chat.rs  cheat.rs  config.rs  continent.rs  event.rs  infrastructure.rs  mod.rs  player.rs  round.rs  savedata.rs  script.rs  village.rs
crates/nil-core/src/world/cheat/: behavior.rs  infrastructure.rs  military.rs  mod.rs  npc.rs  resources.rs  village.rs
crates/nil-core/src/world/infrastructure/: prefecture.rs  storage.rs
crates/nil-core/src/world/infrastructure/building/: prefecture.rs
crates/nil-core/src/world/npc/: bot.rs  precursor.rs
crates/nil-core/src/world/round/: behavior.rs  maneuver.rs  mod.rs  resource.rs  resources.rs
crates/nil-core/src/world/script/: cheat.rs  mod.rs
crates/nil-core/tests/: battle.rs  world.rs
crates/nil-database/: Cargo.toml
crates/nil-macros/: Cargo.toml
crates/nil-macros/src/: lib.rs
crates/nil-macros/src/derive/: mod.rs  unit.rs
crates/nil-server/: Cargo.toml
crates/nil-server/src/: error.rs  lib.rs  main.rs  middleware.rs  response.rs  router.rs  state.rs  websocket.rs
crates/nil-server/src/router/: battle.rs  chat.rs  cheat.rs  city.rs  continent.rs  infrastructure.rs  lobby.rs  military.rs  mod.rs  player.rs  ranking.rs  report.rs  round.rs  script.rs  village.rs  world.rs
crates/nil-server/src/router/cheat/: behavior.rs  city.rs  infrastructure.rs  military.rs  npc.rs  resources.rs  round.rs
crates/nil-server/src/router/infrastructure/: academy.rs  mod.rs  prefecture.rs  stable.rs
crates/nil-server/src/router/npc/: bot.rs  precursor.rs
crates/nil-server/src/server/: local.rs  mod.rs
crates/nil-unit/: Cargo.toml
crates/nil-unit/src/: lib.rs  prelude.rs
crates/nil-unit/src/index/: archer.rs  axeman.rs  heavy_cavalry.rs  light_cavalry.rs  mod.rs  pikeman.rs  swordsman.rs
crates/nil-unit/tests/: battle.rs
crates/nil/src-tauri/: Cargo.toml  tauri.conf.json
crates/nil/src-tauri/capabilities/: default.json
crates/nil/src-tauri/src/: command.rs  error.rs  lib.rs  log.rs  main.rs  manager.rs  plugin.rs  state.rs
crates/nil/src-tauri/src/command/: client.rs  mod.rs  player.rs  round.rs  server.rs  village.rs  world.rs
crates/tauri-plugin-mobile/: Cargo.toml  build.rs  vite.config.js
crates/tauri-plugin-mobile/android/src/main/java/: MobilePlugin.kt
crates/tauri-plugin-mobile/guest-js/: index.ts
crates/tauri-plugin-mobile/guest-js/types/: index.ts
crates/tauri-plugin-mobile/permissions/: default.toml
crates/tauri-plugin-mobile/permissions/autogenerated/: reference.md
crates/tauri-plugin-mobile/permissions/autogenerated/commands/: get_android_version.toml
crates/tauri-plugin-mobile/permissions/schemas/: schema.json
crates/tauri-plugin-mobile/src/: command.rs  desktop.rs  error.rs  lib.rs  mobile.rs  model.rs
(+532 files in other folders)
