[package]
name = "nil-client"
version = "0.1.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
http = "1.3"
local-ip-address = "=0.6.5"
thiserror = "2.0"

[dependencies.nil-core]
version = "*"
path = "../nil-core"

[dependencies.nil-util]
version = "*"
path = "../nil-util"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["charset", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.45"
default-features = false
features = ["time"]

[dependencies.tracing]
version = "0.1"
features = ["release_max_level_off"]

[dependencies.tokio-tungstenite]
version = "0.27"
features = []
