[package]
name = "nil-continent"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
