[package]
name = "nil-core"

[package.version]
workspace = true

[package.description]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies]
itertools = "0.14"
rand = "0.9"
serde_json = "1.0"
thiserror = "2.0"

[dependencies.derive_more]
version = "1.0"
features = ["deref", "deref_mut"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
optional = true
features = ["release_max_level_off"]

[features]
tracing = ["dep:tracing"]
