[package]
name = "nil-database"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
diesel.workspace = true
diesel_migrations.workspace = true
libsqlite3-sys.workspace = true
