[package]
name = "nil-server"

[package.version]
workspace = true

[package.description]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies]
futures = "0.3"
thiserror = "2.0"

[dependencies.axum]
version = "0.8"
features = ["macros", "ws"]

[dependencies.nil-core]
version = "*"
path = "../nil-core"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "2.2"
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.43"
features = ["full"]

[dependencies.tracing]
version = "0.1"
optional = true
features = ["release_max_level_off"]

[features]
tracing = ["dep:tracing"]
