[package]
name = "nil-server"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
itertools = "0.14"
thiserror = "2.0"

[dependencies.axum]
version = "0.8"
features = ["macros", "ws"]

[dependencies.nil-core]
version = "*"
path = "../nil-core"

[dependencies.nil-util]
version = "*"
path = "../nil-util"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.44"
default-features = false
features = ["time"]
