[package]
name = "nil-unit"

[package.version]
workspace = true

[package.description]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies.nil-core]
version = "*"
path = "../nil-core"

[dependencies.nil-macros]
version = "*"
path = "../nil-macros"
