[package]
name = "tauri-plugin-mobile"
links = "tauri-plugin-mobile"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tauri.workspace = true
serde.workspace = true
thiserror.workspace = true

[build-dependencies]
tauri-plugin.workspace = true
