[package]
name = "nil"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
name = "nil_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
itertools = "0.14"
remain = "0.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-process = "2.2"
thiserror = "2.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.nil-client]
version = "*"
path = "../../nil-client"

[dependencies.nil-core]
version = "*"
path = "../../nil-core"

[dependencies.nil-server]
version = "*"
path = "../../nil-server"

[dependencies.nil-util]
version = "*"
path = "../../nil-util"

[dependencies.tauri]
version = "2.4"
features = ["protocol-asset", "rustls-tls"]

[dependencies.tokio]
version = "1.44"
features = ["full"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2"
tauri-plugin-window-state = "2.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.tauri-plugin-prevent-default]
version = "1.2"
features = ["unstable-windows"]

[build-dependencies.tauri-build]
version = "2.1"
features = []
